--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-socket.io-session": "^1.3.2",
     "grunt": "^0.4.0",
     "multer": "^1.3.0",
+    "neat-csv": "^2.1.0",
     "pug": "^2.0.0-rc.1",
     "socket.io": "^2.0.1"
   },
